[iOS][wk2] ASSERT(WebThreadIsCurrent()) in [WebDisplayLinkHandler handleDisplayLink:] https://bugs.webkit.org/show_bug.cgi?id=128490

Reviewed by Simon Fraser.

* platform/graphics/ios/DisplayRefreshMonitorIOS.mm:
(-[WebDisplayLinkHandler handleDisplayLink:]):
[WebDisplayLinkHandler handleDisplayLink:] has an ASSERT(WebThreadIsCurrent()).

We don't use the Web Thread in WebKit2, but it looks like isMainThread()
does the right thing (main thread if web thread is disabled, web thread
otherwise), so use that instead.


Canonical link: https://commits.webkit.org/146526@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@163758 268f45cc-cd09-0410-ab3c-d52691b4dbfc